# email-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  vulture_whitelist.py
dashboard/: app.py
email_agent/: logging_config.py
tests/: __init__.py  test_foo.py
teton_email_agent/: base.py  core.py  email_processor.py  gmail.py  main.py  models.py  reply.py  settings.py
teton_email_agent/tools/: __init__.py  calendar.py  crm.py  knowledge_base.py  reply.py  web_search.py
